fixed spacing issue for my results component

--- a/color-explorer/src/App.css
+++ b/color-explorer/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+#results-section {
+  margin-top: 3em;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
